--- a/index.html
+++ b/index.html
@@ -99,38 +99,41 @@
             <div class="contact-greet">
                 <h2>Get in Touch</h2>
             </div>
-            <div class="contact-details">
-                <div class="email">
-                    <textarea name="message" id="message" cols="30" rows="9" placeholder="Enter Message"></textarea>
-                    <input type="text" id="name" placeholder="Enter your name">
-                    <input type="text" id="email-address" placeholder="Enter email addrerss">
-                    <input type="text" id="subject" placeholder="Enter Subject">
-                    <button id="send-button" onclick="sendEmail()">SEND</button>
+            <form action="https://formsubmit.co/gopala200218@gmail.com" method="POST">
+
+                <div class="contact-details">
+                    <div class="email">
+                        <textarea name="message" id="message" cols="30" rows="9" placeholder="Enter Message"></textarea>
+                        <input type="text" id="name" placeholder="Enter your name">
+                        <input type="text" id="email-address" placeholder="Enter email addrerss">
+                        <input type="text" id="subject" placeholder="Enter Subject">
+                        <button id="send-button" type="submit">SEND</button>
+                    </div>
+                    <div class="contact-info">
+                            <div class="home">
+                                <div class="home-icon"><img src="images/home.jpg" alt=""></div>
+                                <div class="home-detail">
+                                    <h3 class="contact-info-detail-head">Door no: 1/95, Palayaoor(Vill), Periyakottappalli(Po) Krishnagiri (Dt & Tk)</h3>
+                                    <p class="contact-info-detail-sub">Tamilnadu – 635 002.</p>
+                                </div>
+                            </div>
+                            <div class="mobile">
+                                <div class="mobile-icon"><img src="images/mobile.jpg" alt=""></div>
+                                <div class="mobile-detail">
+                                    <h3 class="contact-info-detail-head">+91 79041 32031</h3>
+                                    <p class="contact-info-detail-sub">Mon to Fri 9am to 6pm</p>
+                                </div>
+                            </div>
+                            <div class="mail">
+                                <div class="email-icon"><img src="images/email.jpg" alt=""></div>
+                                <div class="email-detail">
+                                    <h3 class="contact-info-detail-head">gopala200218@gmail.com</h3>
+                                    <p class="contact-info-detail-sub">Send me your query anytime!</p>
+                                </div>
+                            </div>
+                    </div>
                 </div>
-                <div class="contact-info">
-                        <div class="home">
-                            <div class="home-icon"><img src="images/home.jpg" alt=""></div>
-                            <div class="home-detail">
-                                <h3 class="contact-info-detail-head">Door no: 1/95, Palayaoor(Vill), Periyakottappalli(Po) Krishnagiri (Dt & Tk)</h3>
-                                <p class="contact-info-detail-sub">Tamilnadu – 635 002.</p>
-                            </div>
-                        </div>
-                        <div class="mobile">
-                            <div class="mobile-icon"><img src="images/mobile.jpg" alt=""></div>
-                            <div class="mobile-detail">
-                                <h3 class="contact-info-detail-head">+91 79041 32031</h3>
-                                <p class="contact-info-detail-sub">Mon to Fri 9am to 6pm</p>
-                            </div>
-                        </div>
-                        <div class="mail">
-                            <div class="email-icon"><img src="images/email.jpg" alt=""></div>
-                            <div class="email-detail">
-                                <h3 class="contact-info-detail-head">gopala200218@gmail.com</h3>
-                                <p class="contact-info-detail-sub">Send me your query anytime!</p>
-                            </div>
-                        </div>
-                </div>
-            </div>
+            </form>
         </div>
     </main>
     <footer>
