--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <div class="contact-details">
                 <form action="https://api.web3forms.com/submit" method="POST" class="email">
                     <input type="hidden" name="access_key" value="dab5d3ea-3cf5-46da-bdc5-0b47d3e791b1">
-                    <textarea name="message" id="message" name="message" cols="30" rows="9" placeholder="Enter Message"></textarea>
+                    <textarea name="message" id="message" cols="30" rows="9" placeholder="Enter Message"></textarea>
                     <input type="text" id="name" name="name" placeholder="Enter your name">
                     <input type="text" id="email-address" name="email" placeholder="Enter email addrerss">
                     <input type="text" id="subject" name="subject" placeholder="Enter Subject">
