--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 <form action="https://api.web3forms.com/submit" method="POST" class="email">
                     <input type="hidden" name="access_key" value="dab5d3ea-3cf5-46da-bdc5-0b47d3e791b1">
                     <input type="text" id="name" name="name" placeholder="Enter your name">
-                    <input type="text" id="email-address" name="email" placeholder="Enter email addrerss">
+                    <input type="email" id="email-address" name="email" placeholder="Enter email addrerss">
                     <textarea name="message" id="message" cols="30" rows="9" placeholder="Enter Message"></textarea>
                     <button id="send-button" type="submit">SEND</button>
                 </form>
