--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </div>
             <div class="contact-details">
                 <form action="https://api.web3forms.com/submit" method="POST" class="email">
-                    <input type="hidden" name="access_key" value="dab5d3ea-3cf5-46da-bdc5-0b47d3e791b1">
+                    <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE">
                     <input type="text" id="name" name="name" placeholder="Enter your name" required>
                     <input type="email" id="email-address" name="email" placeholder="Enter email addrerss" required>
                     <textarea name="message" id="message" cols="30" rows="9" placeholder="Enter Message" required></textarea>
